2008-02-07  Akira TAGOH  <tagoh@redhat.com>

	* src/imsettings-manager.c (_build_pidfilename): get rid of .bak from
	the filename to make stopping-process working for the user specific
	xinputrc.
	(_update_symlink): do nothing if it's going to do something for .xinputrc.
	(imsettings_manager_load_conf): add the info for .xinputrc.bak too.

	* imsettings/imsettings-info.c (imsettings_info_set_property):
	Set properties for the user specific xinputrc too. (RH#431291)

2008-01-30  Akira TAGOH  <tagoh@redhat.com>

	* src/imsettings-manager.c (_start_process): set an empty string
	if args is null.
	(imsettings_manager_real_start_im): reload the IM info.
	(imsettings_manager_real_stop_im): likewise.

	* imsettings/imsettings-request.c (imsettings_request_set_property):
	remove the code to unref the dbus connection so far.
	(imsettings_request_finalize): likewise.

	* imsettings/imsettings-observer.c (imsettings_observer_set_property):
	remove the code to unref the dbus connection so far.
	(imsettings_observer_finalize): likewise.

2008-01-28  Akira TAGOH  <tagoh@redhat.com>

	* src/imsettings-manager.c (_update_symlink): check the filename.
	we don't expect the filename is NULL for the user specific conffile anymore.

	* imsettings/imsettings-info-private.h (IMSETTINGS_USER_SPECIFIC_SHORT_DESC):
	Fix a typo.

	* imsettings/imsettings-info.c (imsettings_info_set_property):
	check the filename much strictly.

2008-01-25  Akira TAGOH  <tagoh@redhat.com>

	* backends/gconf/Makefile.am (EXTRA_DIST): Fix a typo.

	* src/imsettings-manager.c (_start_process): Inherit the environment
	variables to bring up the child process.

	* src/imsettings-manager.c (_collect_im_list): new.
	(imsettings_manager_real_get_list): build the IM list dynamically.
	(_start_process): set LC_CTYPE to run the programs.

	* imsettings/imsettings-request.c (imsettings_request_set_locale): new.
	(imsettings_request_is_system_default): new.
	(imsettings_request_is_user_default): new.