@@ -1,5 +1,13 @@
 2008-02-07  Akira TAGOH  <tagoh@redhat.com>
 
+	* src/imsettings-manager.c: cleaning up.
+
+	* imsettings/imsettings-request.c: cleaning up.
+
+	* imsettings/imsettings-observer.c: cleaning up.
+
+	* imsettings/imsettings-info.c: cleaning up.
+
 	* src/imsettings-manager.c (_build_pidfilename): get rid of .bak from
 	the filename to make stopping-process working for the user specific
 	xinputrc.
